# CPGR

./: CMakeLists.txt  README.md  main.cpp
include/: Transformation.h  Triangle.h
src/: Transformation.cpp  Triangle.cpp
